Added instructions how to run the samples Added easy to use solr run command

--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,4 @@ __pycache__/
 /SampleSolrApp/changelog.txt
 /SampleSolrApp.Tests/SolrNet.chm
 /SampleSolrApp.Tests/changelog.txt
+/solr/solr/data
