Remove error page

--- a/SampleSolrApp/SampleSolrApp.csproj
+++ b/SampleSolrApp/SampleSolrApp.csproj
@@ -5,4 +5,8 @@
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Models" />
+    </ItemGroup>
+
 </Project>
