Don't launch browser

--- a/SampleSolrApp/Properties/launchSettings.json
+++ b/SampleSolrApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "SampleSolrApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
