--- a/SampleSolrApp/SampleSolrApp.csproj
+++ b/SampleSolrApp/SampleSolrApp.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Models" />
+      <PackageReference Include="SolrNet" Version="1.0.19" />
     </ItemGroup>
 
 </Project>
