Refactor docker stuff in bash to .NET code

--- a/SampleSolrApp/SampleSolrApp.csproj
+++ b/SampleSolrApp/SampleSolrApp.csproj
@@ -4,9 +4,11 @@
         <TargetFramework>net5.0</TargetFramework>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DotNet.Testcontainers" Version="1.5.0" />
       <PackageReference Include="SolrNet" Version="1.1.0" />
       <PackageReference Include="SolrNet.Microsoft.DependencyInjection" Version="1.1.0" />
     </ItemGroup>
