--- a/SampleSolrApp/SampleSolrApp.csproj
+++ b/SampleSolrApp/SampleSolrApp.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DotNet.Testcontainers" Version="1.5.0" />
+      <PackageReference Include="Testcontainers" Version="2.4.0" />
       <PackageReference Include="SolrNet" Version="1.1.0" />
       <PackageReference Include="SolrNet.Microsoft.DependencyInjection" Version="1.1.0" />
     </ItemGroup>
